# visium-spatial-transcriptomics

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: methodology.md
notebooks/: autocorr.ipynb  eda.ipynb  nhood.ipynb
src/visium_spatial/: __init__.py  build_graph.py  cluster.py  compartments.py  global_autocorr.py  load_visium.py  local_autocorr.py  moran_scratch.py  multitest.py  overlay.py  preprocess.py  qc.py  types.py
tests/: conftest.py  test_build_graph.py  test_cluster.py  test_compartments.py  test_fixtures.py  test_global_autocorr.py  test_load_visium.py  test_local_autocorr.py  test_moran_scratch.py  test_multitest.py  test_overlay.py  test_preprocess.py  test_qc.py
tests/fixtures/: scalefactors.json  synthetic.py
